<resources>
    <string name="app_name">海狸金融</string>
    <string name="please_wait">请耐心等待</string>
    <string name="mainActivity">首页</string>
    <string name="guidepageActivity">引导页</string>
    <string name="welcomeActivity">海狸金融</string>
    <string name="go_init">进入主界面</string>
    <string name="define">确&#x0020;定</string>
    <string name="cancel">取&#x0020;消</string>
    <string name="tip">提示</string>
    <string name="exit_app">您确定要退出APP吗？</string>
    <string name="financial">理财</string>
    <string name="assets">资产</string>
    <string name="my">我的</string>
    <string name="tab_xinshou">新手指引</string>
    <string name="tab_pingtai_act">平台活动</string>
    <string name="tab_security">安全保障</string>
    <string name="tab_prize">邀请有奖</string>
    <string name="more">更多</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="get_msgcode">再次获取</string>
    <string name="content_null">暂无内容</string>
    <string name="user_more">更多</string>
    <string name="ok">确定</string>
    <string name="cancel_dialog">取消</string>
    <string name="submit">提交</string>
    <string name="account_security">账户安全</string>
    <string name="title_activity_my_invite">MyInviteActivity</string>
    <string name="title_activity_my_invite_adapter">MyInviteAdapter</string>
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="thesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
</resources>
