<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_mainColor"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="20dip">

                <TableRow>

                    <TextView
                        style="@style/dateStyle"
                        android:layout_gravity="center_vertical"
                        android:text="@string/sunday"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/monday"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/thesday"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/wednesday"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/thursday"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/friday"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/saturday"
                        android:textColor="@color/white" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/bg_mainColor">

            </android.support.v4.view.ViewPager>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/calendar_text_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:gravity="left|center_vertical"
                    android:text="当月无还款项"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/calendar_two_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="20dp"
                    android:gravity="right|center_vertical"
                    android:textSize="16sp" />

            </LinearLayout>

                <com.cheguan.lgdpulltorefresh.PullToRefreshView
                    android:id="@+id/activity_calendar_pull"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/activity_calendar_rv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/bg_grey">

                    </android.support.v7.widget.RecyclerView>

                </com.cheguan.lgdpulltorefresh.PullToRefreshView>

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/calendar_layout_fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

    </FrameLayout>
</FrameLayout>