<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_grey" />

    <LinearLayout
        android:id="@+id/tab_menu"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingTop="2dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_home"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:focusable="true"
                android:src="@mipmap/tab_homepager_selected"
             />

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_home"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="首页"
                android:textColor="@color/tab_selected_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_licai"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="2dp">

            <ImageView
                android:id="@+id/iv_licai"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/tab_licai_normal" />

            <TextView
                android:id="@+id/tv_licai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_licai"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/financial"
                android:textColor="@color/tab_normal_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_asstes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="2dp">
            <ImageView
                android:id="@+id/iv_asstes"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/tab_assets_normal"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
            <TextView
                android:id="@+id/tv_asstes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_asstes"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/assets"
                android:textColor="@color/tab_normal_color"
                android:textSize="12sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_my"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingTop="2dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_my"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/tab_my_normal" />

            <TextView
                android:id="@+id/tv_my"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_my"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/my"
                android:textColor="@color/tab_normal_color"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>

